config/minikube/nginx-ingress-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress 
  labels: 
    skaffold.dev/cleanup: 'false'
